[tool.poetry]
name = "supvoter"
version = "0.1.0"
description = "Supvote is crowd upvote bot"
authors = ["Asım Tahir <AsimTahir@protonmail.com>"]

packages = [
    { include = "main.py" },
]

[tool.poetry.scripts]
start = "main:main"

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
